<resources>
    <string name="app_name">Demo App</string>
    <string name="app_heading">DEMO APP</string>
    <string name="image_url_user">"http://www.careerbased.com/themes/comb/img/avatar/default-avatar-male_10.png"</string>
    <string name="image_url_group">"http://www.careerbased.com/themes/comb/img/avatar/default-avatar-male_10.png"</string>
    <string name="image_url_trans">"http://www.careerbased.com/themes/comb/img/avatar/default-avatar-male_10.png"</string>
    <string name="select_user">Select a user</string>
    <string name="url_hostname">Hostname</string>
    <string name="url_address">http://192.168.1.129:8080/</string>
    <string name="url_user_id">userId</string>
    <string name="url_group_id">groupId</string>
    <string name="url_transaction_id">transId</string>
    <string name="url_image">imageUrl</string>
    <string name="url_user_name">userName</string>
    <string name="url_user_findAll">user/findAll</string>
    <string name="url_user_findById">user/findById</string>
    <string name="url_user_string">user/profile</string>
    <string name="url_group_findAll">group/findAll</string>
    <string name="url_group_findById">group/findById</string>
    <string name="url_group_findByUserId">group/findAllByUserId</string>
    <string name="url_group_add">group/addUsers</string>
    <string name="url_group_findAllUsersByGroupId">group/findAllUsersByGroupId</string>
    <string name="url_group_findDataById">group/showSplits</string>
    <string name="url_group_settleUp">group/settleUp</string>
    <string name="url_group_name">group/groupName</string>
    <string name="url_transaction_findAll">transaction/findAll</string>
    <string name="url_transaction_findById">transaction/findById</string>
    <string name="url_transaction_findByGroupId">transaction/findAllByGroupId</string>
    <string name="url_transaction_findByUserId">transaction/findAllByUserId</string>
    <string name="url_transaction_findGroupExpByUserId">transaction/findGroupByUserId</string>
    <string name="url_transaction_findNonGroupExpByUserId">transaction/findNonGroupByUserId</string>
    <string name="url_transaction_findAmountsByTransId">transaction/findAmountByTransId</string>
    <string name="url_user_save">user</string>
    <string name="url_group_save">group/save</string>
    <string name="url_transaction_save">transaction/save</string>
    <string name="url_user_update">user</string>
    <string name="url_group_update">group/update</string>
    <string name="url_transaction_update">transaction/update</string>
    <string name="bill_title">Add bill</string>
    <string name="bill_save">SAVE</string>
    <string name="bill_description">Enter a description</string>
    <string name="bill_value">Amount</string>
    <string name="bill_card_value">0.00</string>
    <string name="bill_select_group">Select Group</string>
    <string name="bill_select_user">Select User</string>
    <string name="bill_date">Click to choose date</string>
    <string name="bill_label_mop">Mode of Payment</string>
    <string name="bill_amount">Amount</string>
    <string name="bill_label_date">Date</string>
    <string name="bill_label_description">Description</string>
    <string name="bill_label_lender">Lenders</string>
    <string name="bill_label_borrower">Borrowers</string>
    <string name="bill_label_group">Group</string>
    <string name="bill_add_lender">Add Lenders?</string>
    <string name="bill_add_borrower">Add Borrowers?</string>
    <string name="lender_heading">Click to select</string>
    <string name="borrower_heading">Click to select</string>
    <string name="lb_submit">Submit</string>
    <string name="lb_cancel">Dismiss</string>
    <string-array name="bill_mop_list">
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>Paytm</item>
        <item>Freecharge</item>
    </string-array>
    <string name="bill_category_title">Choose a category</string>
    <string name="friend_title">Add friend</string>
    <string name="friend_hint">Enter name, email or phone #</string>
    <string name="blank_activity">Activities will be added later.</string>
    <string name="settleUp">SETTLE UP</string>
    <string name="balances">BALANCES</string>
    <string name="debt">DEBT</string>
    <string name="addFriends">+ ADD MORE FRIENDS</string>
    <string name="addGroup">+ START A NEW GROUP</string>
    <string name="owed">you are owed</string>
    <string name="lent">you lent</string>
    <string name="paid">you paid</string>
    <string name="action_settings">Settings</string>
    <string name="profilePic" />
    <string name="total">TOTAL BALANCE</string>
    <string name="settled">You are all settled up</string>
    <string name="menu_total_all">All Balances</string>
    <string name="menu_total_owe">You owe</string>
    <string name="menu_total_owed">You are owed</string>
    <string name="username">Atul Anand</string>
    <string name="email">atul.anand@zemosolabs.com</string>
    <string name="drawer_close">drawer_close</string>
    <string name="drawer_open">drawer_open</string>
    <string name="nav_home">Home</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_add_user">Add User</string>
    <string name="nav_add_group">Add Group</string>
    <string name="nav_logout">Log out</string>
    <string name="action_websearch">Search</string>
    <string name="navigation_copyright">
        Made with :) at Zemoso, HYD, India\n
        Authored by Atul Anand,\n
        P.S Demo App! 2017
    </string>
    <string name="proceed">Proceed</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="current_user_id">Enter User Id</string>
    <string name="friendsUrl" />
    <string name="groupsUrl" />
    <string name="title_activity_friend_profile">FriendProfile</string>
    <string name="add_member_heading">Group Name</string>
    <string name="add_member_item_plus">+</string>
    <string name="add_member_button">Done</string>
    <string name="add_user_heading">Add Users</string>
    <string name="add_user_name">Name?</string>
    <string name="add_user_email">Email?</string>
    <string name="add_user_phone">Phone number?</string>
    <string name="add_user_age">Age?</string>
    <string name="add_user_submit">SUBMIT</string>
    <string name="detail_debts">Debts</string>
    <string name="detail_date">Date</string>
    <string name="detail_amount">Amount</string>
    <string name="detail_mop">Mode of Payment</string>
    <string name="add_more_members">Add more members?</string>
    <string name="add_members_button">Add Members?</string>
</resources>