<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/action_search"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/action_search"
        android:title="@string/nav_setting"/>
    <item
        android:id="@+id/nav_add_user"
        android:icon="@drawable/action_search"
        android:title="@string/nav_add_user" />
    <item
        android:id="@+id/nav_add_group"
        android:icon="@drawable/action_search"
        android:title="@string/nav_add_group" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/action_search"
        android:title="@string/nav_logout"/>
</menu>