<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.zemoso.atul.splitwise.fragments.AddUser">

    <TextView
        android:id="@+id/add_user_heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_user_heading_height"
        android:padding="10dp"
        android:text="@string/add_user_heading"
        android:textAlignment="center"
        android:textSize="@dimen/list_item_1"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="@dimen/user_edit_width"
        android:layout_height="@dimen/user_edit_height"
        android:layout_below="@id/add_user_heading"
        android:layout_centerHorizontal="true"
        android:hint="@string/add_user_name"
        android:inputType="textPersonName"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/user_email"
        android:layout_width="@dimen/user_edit_width"
        android:layout_height="@dimen/user_edit_height"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/add_user_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/user_phone"
        android:layout_width="@dimen/user_edit_width"
        android:layout_height="@dimen/user_edit_height"
        android:layout_below="@id/user_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/add_user_phone"
        android:inputType="phone"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/user_age"
        android:layout_width="@dimen/user_edit_width"
        android:layout_height="@dimen/user_edit_height"
        android:layout_below="@id/user_phone"
        android:layout_centerHorizontal="true"
        android:hint="@string/add_user_age"
        android:inputType="number"
        android:textAlignment="center" />
    <Button
        android:id="@+id/user_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_below="@id/user_age"
        android:layout_centerHorizontal="true"
        android:background="@color/color_add_member_active"
        android:text="@string/add_user_submit"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
