<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.zemoso.atul.splitwise.fragments.AddMembers">

    <TextView
        android:id="@+id/add_member_group_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_member_list_height"
        android:padding="10dp"
        android:text="@string/add_member_heading"
        android:textAlignment="center"
        android:textSize="@dimen/list_item_1"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_member_recycler"
        android:layout_width="@dimen/add_member_dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/add_more_members"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_member_button_add_lender"
            android:layout_width="@dimen/add_member_button_width"
            android:layout_height="@dimen/add_member_button_width"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@color/color_add_member_active"
            android:text="@string/add_member_item_plus"
            android:textSize="@dimen/list_item_1" />

    </LinearLayout>

    <Button
        android:id="@+id/add_member_button_done"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/add_member_list_height"
        android:layout_gravity="center"
        android:background="@color/color_add_member_active"
        android:text="@string/add_member_button"
        android:textColor="@color/colorWhite" />

</LinearLayout>
