<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zemoso.atul.splitwise.activities.TransactionDetail"
    tools:showIn="@layout/activity_transaction_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.zemoso.atul.splitwise.activities.TransactionDetail">

        <!--<TextView-->
        <!--android:id="@+id/trans_detail_description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/trans_detail_description_height"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="28sp"/>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trans_detail_dot_h"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/detail_date"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/trans_detail_total_amount_h"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/detail_amount"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/trans_detail_mop_h"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/detail_mop"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trans_detail_dot"
                android:layout_width="100dp"
                android:layout_height="@dimen/trans_detail_amount_height"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/trans_detail_total_amount"
                android:layout_width="150dp"
                android:layout_height="@dimen/trans_detail_amount_height"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/trans_detail_mop"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/trans_detail_amount_height"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/trans_debts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/detail_debts"
            android:textSize="12sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_show_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
