<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    tools:context="com.zemoso.atul.splitwise.activities.LoginActivity">
    <!--<EditText-->
    <!--android:id="@+id/editText"-->
    <!--android:layout_width="@dimen/edit_text_width"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginBottom="25dp"-->
    <!--android:hint="@string/current_user_id"-->
    <!--android:textAlignment="center"/>-->
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
        android:id="@+id/auto_complete"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
            android:layout_marginTop="230dp"
        android:hint="@string/add_user_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />
    <!--<Spinner-->
    <!--android:id="@+id/spinner"-->
    <!--android:layout_width="@dimen/edit_text_width"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginBottom="25dp"-->
    <!--android:prompt="@string/select_user"-->
    <!--android:textAlignment="center"/>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:background="@color/colorButtonSettleUp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:background="@color/colorButtonSettleUp"
                android:text="@string/register"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:elevation="@dimen/progress_bar_elevation"
        android:indeterminate="true"
        android:paddingBottom="@dimen/progress_bar_vertical_padding"
        android:paddingEnd="@dimen/progress_bar_horizontal_padding"
        android:paddingStart="@dimen/progress_bar_horizontal_padding"
        android:paddingTop="@dimen/progress_bar_vertical_padding"
        android:visibility="gone" />
</FrameLayout>
